@@ -1,0 +1,8 @@
+// Shortcut for getting the current Page widget.
+// Author: Xavier Amado (xavier@blackbloodstudios.com)
+
+public Widget CurrentPageWidget {
+        get {
+                return GetNthPage (CurrentPage);
+        }
+}       
