@@ -554,6 +554,8 @@
     </attribute>
   </data>
 </rule>
+
+<!-- property types -->
 <rule>
   <class name="GnomeCanvasClipgroup">
     <property>Wind</property>
@@ -562,6 +564,17 @@
     <attribute target="property">
       <name>type</name>
       <value>ArtWindRule</value>
+    </attribute>
+  </data>
+</rule>
+<rule>
+  <class name="GnomeCanvasShape">
+    <property>Dash</property>
+  </class>
+  <data>
+    <attribute target="property">
+      <name>type</name>
+      <value>ArtVpathDash</value>
     </attribute>
   </data>
 </rule>
