@@ -47,6 +47,10 @@
 	
 2003-07-30  Duncan Mak  <duncan@ximian.com>
 
+	* en/Gnome/CanvasShape.xml: documented.
+
+2003-07-30  Duncan Mak  <duncan@ximian.com>
+	
 	* en/Gdk/EventNoExpose.xml: 
 	* en/Gdk/EventButton.xml: Added hyperlinks.
 
