@@ -1,3 +1,8 @@
+2003-08-06  Xavier Amado <xavier@blackbloodstudios.com>
+
+	* gtk/Notebook.custom (CurrentPageWidget): Added a property for
+	getting the current page widget directly.
+
 2003-07-30  Duncan Mak  <duncan@ximian.com>
 
 	* sources/Gnome.metadata:
